--- a/examples/test/columns.html
+++ b/examples/test/columns.html
@@ -8,8 +8,10 @@
 <link href="" rel="stylesheet">
 </head>
 <body>
-    <div class="menus"></div>
-    <div class="absoluteDiv"></div>
+    <div style="width:100px;height:40px;display:block"></div>
+    <div style = "margin-top:100px;">
+        <div style="position:fixed;top:10px;width:40px;height:60px;background:#000"></div>
+    </div>
 </body>
 <style>
 body{padding:0;margin:0;}
